# back/api/routes/utilisateur.js
@@ -1,7 +1,6 @@
 const express = require('express');
 const router = express.Router();
 const models = require('../../models');
-const { Op } = require('sequelize');
 
 module.exports = () => {
 
@@ -18,7 +17,7 @@ module.exports = () => {
     });
 
     //Authentification d'un utilisateur
-    router.get('/authentification', (req, res) => {
+    router.post('/authentification', (req, res) => {
         models.Utilisateur.findOne({
 
             where: {
@@ -36,7 +35,7 @@ module.exports = () => {
             res.status(200).send(user);
         }).catch((error) => {
             console.log(error);
-            res.status(500).send(error);
+            res.sendStatus(500)
         });
     });
 
@@ -60,9 +59,9 @@ module.exports = () => {
     });
 
     //modification d'un utilisateur
-    router.put('/:id', async (req, res) => {
+    router.put('/:id', async(req, res) => {
         models.Utilisateur.update(req.body, {
-            where: {
+            where : {
                 id: req.params.id
             }
         }).then((response) => {
@@ -74,7 +73,7 @@ module.exports = () => {
     });
 
     //suppression d'un utilisateur
-    router.delete('/:id', (req, res) => {
+    router.delete('/:id', (req , res) => {
         models.Utilisateur.destroy({
             where: {
                 id: req.params.id
@@ -87,7 +86,7 @@ module.exports = () => {
     });
 
     //ajout d'un profil à l'utilisateur
-    router.post('/:iduser/profil/:idprofil', (req, res) => {
+    router.post('/:iduser/profil/:idprofil', (req , res) => {
         models.Utilisateur.findByPk(req.params.iduser).then(user => {
             user.addProfil(req.params.idprofil);
             user.save();
@@ -99,7 +98,7 @@ module.exports = () => {
     });
 
     //suppression d'un profil à l'utilisateur
-    router.delete('/:iduser/profil/:idprofil', (req, res) => {
+    router.delete('/:iduser/profil/:idprofil', (req , res) => {
         models.Utilisateur.findByPk(req.params.iduser).then(user => {
             user.removeProfil(req.params.idprofil);
             user.save();
@@ -111,105 +110,82 @@ module.exports = () => {
     });
 
     // récupération des relevés d'un utilisateur, possibilité de filtré par type de relevé et de paginer
-    router.get('/:id/releve', async (req, res) => {
-        try {
-            const utilisateur = await models.Utilisateur.findByPk(req.params.id);
-            const profils = await utilisateur.getProfils();
-            let profilsId = [];
-            profils.forEach(profil => {
-                profilsId.push(profil.id);
-            });
-            if (req.query.page) {
-                NOMBRE_RELEVES_PAR_PAGE = 5
-                start = (req.query.page - 1) * NOMBRE_RELEVES_PAR_PAGE;
-                end = (req.query.page) * NOMBRE_RELEVES_PAR_PAGE;
-                if (req.query.type) {
-                    const type = await models.TypeReleve.findOne(
-                        {
-                            where: {
-                                label: req.query.type
-                            }
-                        }
-                    );
-                    const releves = await models.ReleveMedical.findAll(
-                        {
-                            offset: start,
-                            limit: end,
-                            where: {
-                                UtilisateurId: req.params.id,
-                                TypeReleveId: type.id
-                            },
-                        }
-                    );
-                    res.status(200).send(await correlateReleveAnalyse(profilsId, releves));
-                } else {
-                    const releves = await models.ReleveMedical.findAll(
-                        {
-                            offset: start,
-                            limit: end,
-                            where: {
-                                UtilisateurId: req.params.id
-                            }
-                        }
-                    );
-                    res.status(200).send(await correlateReleveAnalyse(profilsId, releves));
-                }
-            } else if (req.query.type) {
-                const type = await
+    router.get('/:id/releve', (req, res) => {
+        if(req.query.page) {
+            NOMBRE_RELEVES_PAR_PAGE = 5
+            start = (req.query.page - 1)*NOMBRE_RELEVES_PAR_PAGE;
+            end = (req.query.page)*NOMBRE_RELEVES_PAR_PAGE;
+            if(req.query.type) {
                 models.TypeReleve.findOne({
                     where: {
                         label: req.query.type
                     }
+                }).then((type) => {
+                    models.ReleveMedical.findAll({
+                        offset: start,
+                        limit: end,
+                        where: {
+                            UtilisateurId: req.params.id,
+                            TypeReleveId: type.id
+                        },
+                    }).then((releves) => {
+                        res.status(200).send(releves);
+                    }).catch((error) => {
+                        console.log(error);
+                        res.status(500).send(error);
+                    });
+                }).catch((error) => {
+                    console.log(error);
+                    res.status(500).send(error);
                 });
-                const releves = await models.ReleveMedical.findAll({
+            } else {
+                models.ReleveMedical.findAll({
+                    offset: start,
+                    limit: end,
+                    where: {
+                        UtilisateurId: req.params.id
+                    }
+                }).then((releves) => {
+                    res.status(200).send(releves);
+                }).catch((error) => {
+                    console.log(error);
+                    res.status(500).send(error);
+                });
+            }
+        } else if (req.query.type) {
+            models.TypeReleve.findOne({
+                where: {
+                    label: req.query.type
+                }
+            }).then((type) => {
+                models.ReleveMedical.findAll({
                     where: {
                         UtilisateurId: req.params.id,
                         TypeReleveId: type.id
                     },
+                }).then((releves) => {
+                    res.status(200).send(releves);
+                }).catch((error) => {
+                    console.log(error);
+                    res.status(500).send(error);
                 });
-                res.status(200).send(await correlateReleveAnalyse(profilsId, releves));
-            } else {
-                const releves = await models.ReleveMedical.findAll({
-                    where: {
-                        UtilisateurId: req.params.id
-                    }
-                });
-                res.status(200).send(await correlateReleveAnalyse(profilsId, releves));
-            }
-        } catch (error) {
-            console.log(error);
-            res.status(500).send(error);
-        }
-    });
-
-    async function correlateReleveAnalyse(profilsId, releves) {
-        const relevesAnalyse = [];
-        for(i in releves) {
-            console.log(i);
-            const releve = releves[i];
-            await models.Analyse.findOne({
+            }).catch((error) => {
+                console.log(error);
+                res.status(500).send(error);
+            });
+        } else {
+            models.ReleveMedical.findAll({
                 where: {
-                    ProfilId: profilsId,               // qui respecte les profils
-                    TypeReleveId: releve.TypeReleveId, // le type de releve
-                    mini: { [Op.lte]: releve.valeur }, // la valeur de releve doit être compris entre le seuil min
-                    maxi: { [Op.gte]: releve.valeur }  // et le seuil max
-                },
-                include: [
-                    {
-                        model: models.Dangerosite, 
-                        include: [
-                            {
-                                model: models.Couleur,
-                            }
-                        ]
-                    }
-                ]
-            }).then((analyses) => {
-                relevesAnalyse.push([releve, analyses]);
+                    UtilisateurId: req.params.id
+                }
+            }).then((releves) => {
+                res.status(200).send(releves);
+            }).catch((error) => {
+                console.log(error);
+                res.status(500).send(error);
             });
         }
-        return relevesAnalyse;
-    }
+    });
 
     return router;
 };
